--- a/src/index.css
+++ b/src/index.css
@@ -12187,3 +12187,11 @@ section#contact form#contactForm :-ms-input-placeholder {
     Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+
+.op_button{
+  margin-top: 5px;
+}
+.yelp_button{
+  margin-top:5px;
+}
