--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ body {
   text-align: var(--bs-body-text-align);
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(58, 27, 27, 0);
 }
 
 hr {
@@ -11784,10 +11784,10 @@ p {
 }
 header.masthead {
   padding-top: 10.5rem;
-  padding-bottom: 6rem;
+  padding-bottom: 3rem;
   text-align: center;
   color: #fff;
-  background-image: url("../public/assets/img/header-bg.jpg");
+  background-image: url("../public/assets/img/banner.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -11795,7 +11795,7 @@ header.masthead {
 }
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
-  font-style: italic;
+  /* font-style: italic; */
   line-height: 1.5rem;
   margin-bottom: 25px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -11814,20 +11814,21 @@ header.masthead .masthead-heading {
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 17rem;
-    padding-bottom: 12.5rem;
+    padding-top: 15rem;
+    /* padding-bottom: 10rem; */
   }
   header.masthead .masthead-subheading {
-    font-size: 2.25rem;
-    font-style: italic;
+    font-size: 1.25rem;
+    /* font-style: italic; */
     line-height: 2.25rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   header.masthead .masthead-heading {
-    font-size: 4.5rem;
-    font-weight: 700;
-    line-height: 4.5rem;
-    margin-bottom: 4rem;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1rem;
+    font-style: italic;
+    /* margin-bottom: 8rem; */
   }
 }
 #portfolio .portfolio-item {
@@ -12188,10 +12189,13 @@ section#contact form#contactForm :-ms-input-placeholder {
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-
-.op_button{
-  margin-top: 5px;
+.op_button {
+  margin-top: 0.5rem;
 }
-.yelp_button{
-  margin-top:5px;
+.yelp_button {
+  margin-top: 0.5rem;
+}
+
+.mk-button {
+  margin-top: 8rem;
 }
